--- a/Concordance/readme
+++ b/Concordance/readme
@@ -1,1 +1,2 @@
 Creates a concordance using words and line numbers. 
+Linenumber file is a testing code only; only concordance and bunny files are needed
